update the version 0.5.1

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py36 py37
+envlist = py37, py38, py39, py310, py311
 
 [testenv]
 deps =
     pytest
-    pytest-pep8
+    pytest-pycodestyle
     pytest-flakes
 
-commands = py.test -v --pep8 --flakes --doctest-modules openapi tests
+commands = py.test -v --pycodestyle --flakes --doctest-modules openapi tests
